--- a/fastcalc/fastcalc/en.lproj/MainStoryboard.storyboard
+++ b/fastcalc/fastcalc/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="avx-Jj-XXv">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
@@ -7,20 +7,16 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="5">
+        <scene sceneID="dTM-yY-Rnb">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
-                <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SB7-VR-DGa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="ooc-2h-P5o" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Mm8-1B-Rfy">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="yvC-Kb-kXr">
-<<<<<<< HEAD
-                                <rect key="frame" x="124" y="212" width="72" height="37"/>
-=======
-                                <rect key="frame" x="124" y="177" width="72" height="37"/>
->>>>>>> c67603039c1d79b74d0da775e528a32fb12f896a
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="FoX-hn-hFK">
+                                <rect key="frame" x="103" y="125" width="72" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal">
@@ -31,50 +27,109 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="hhD-ru-zW1" kind="push" id="goP-hn-1vG"/>
+                                    <segue destination="QQP-BZ-dpZ" kind="push" id="OYv-mA-OFY"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="A9G-cT-nl4">
+                                <rect key="frame" x="103" y="205" width="72" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="OwN-yF-7Gb" kind="push" id="1lz-1a-c4H"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="sh8-90-PcR"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="36" y="75"/>
+            <point key="canvasLocation" x="333" y="3"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="g3T-za-lcI">
+        <scene sceneID="5BF-6K-du1">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WIc-wq-BDm" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="hhD-ru-zW1" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="weG-h5-c2e">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZiK-zU-08D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="OwN-yF-7Gb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="deJ-Qc-DMa">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Вася Пупкин" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="FZw-BS-oG3">
-<<<<<<< HEAD
-                                <rect key="frame" x="67" y="220" width="186" height="21"/>
-=======
-                                <rect key="frame" x="67" y="175" width="186" height="21"/>
->>>>>>> c67603039c1d79b74d0da775e528a32fb12f896a
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="R2F-As-JNF">
+                                <rect key="frame" x="109" y="89" width="72" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="3Qv-fp-9ar"/>
+                    <navigationItem key="navigationItem" id="zGv-nQ-yeB"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="443" y="75"/>
+            <point key="canvasLocation" x="859" y="256"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="AeE-6E-UeQ">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="opV-O0-i3C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="QQP-BZ-dpZ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SRi-ca-xjx">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9ff-B9-S9b">
+                                <rect key="frame" x="116" y="173" width="72" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="v3d-I3-crm"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="859" y="-392"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="d2c-FK-seI">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RpG-eo-DwG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="avx-Jj-XXv" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="cFq-wf-gez">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ooc-2h-P5o" kind="relationship" relationship="rootViewController" id="cFP-sa-4io"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="-67" y="3"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
