--- a/fastcalc/fastcalc/en.lproj/MainStoryboard.storyboard
+++ b/fastcalc/fastcalc/en.lproj/MainStoryboard.storyboard
@@ -80,36 +80,40 @@
                     <navigationItem key="navigationItem" id="zGv-nQ-yeB"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="859" y="256"/>
+            <point key="canvasLocation" x="847" y="255"/>
         </scene>
-        <!--View Controller-->
+        <!--Example Controller-->
         <scene sceneID="AeE-6E-UeQ">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="opV-O0-i3C" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="QQP-BZ-dpZ" sceneMemberID="viewController">
+                <viewController id="QQP-BZ-dpZ" customClass="ExampleController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SRi-ca-xjx">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9ff-B9-S9b">
                                 <rect key="frame" x="116" y="173" width="72" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal">
+                                <state key="normal" title="back">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="backClicked:" destination="QQP-BZ-dpZ" eventType="touchUpInside" id="vyV-m4-Xcl"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="v3d-I3-crm"/>
+                    <nil key="simulatedTopBarMetrics"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="859" y="-392"/>
+            <point key="canvasLocation" x="847" y="-413"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="d2c-FK-seI">
@@ -130,6 +134,14 @@
             <point key="canvasLocation" x="-67" y="3"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="ExampleController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ExampleController.h"/>
+            <relationships>
+                <relationship kind="action" name="backClicked:"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
